2008-07-07  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/fourier.c: (homo_dft), (homo_idft)

2008-07-07  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/homo-dft.c: new.
	* operations/frequency/homo-idft.c: new.
	* operations/frequency/tools/fourier.c: added homo_dft(), homo_idft().

2008-07-01  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/filters.c: implemented freq_multiply().

2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	Added the imag-matrix.

	* operations/frequency/freq-general-filter.c:
	* operations/frequency/tools/filters.c:

2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/freq-general-filter.c: added the property flag to
	decide which componet need to process.

2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/freq-general-filter.c: get/set_freq() tested.
	* operations/frequency/tools/component.c: modified get/set_freq().
	* operations/frequency/tools/display.c:
	* operations/frequency/tools/filters.c: remodified the parameter table.

2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/freq-general-filter.c: the property tested.
	* operations/frequency/tools/filters.c: modified the parameter table.

2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/dft.c:
	* operations/frequency/freq-general-filter.c: new op.
	* operations/frequency/idft.c:
	* operations/frequency/tools/Makefile.am: add filters.c
	* operations/frequency/tools/filters.c: new.

2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/display.c: a small bug fixed.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	The work of moving Transforming-opeartions into new format completed.

	* operations/frequency/dft.c: used the same size input/out buffer.
	* operations/frequency/idft.c: same as above.
	* operations/frequency/preview-frequency.c: same as above.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>
